--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>gmc</groupId>
 	<artifactId>DevopsBootCamp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<name>DevopsBootCamp:jar:0.0.1-20220909.222043-1</name>
 	<description>projet spring boot</description>
 	<properties>
 		<java.version>1.8</java.version>
