--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     networks:
       - spring
   pgadmin:
-    container_name: pgadmingmc/jenkins
+    container_name: pgadmingmcjenkins
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin
